--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Haunter</title>
+    <title>Haunter - AgustinArenas</title>
+    <meta name="title" content="Haunter - AgustinArenas" />
+    <meta
+      name="description"
+      content="Proyecto para poder mejorar en el uso de Css y HTML."
+    />
+
+    <!--  Open Graph / Facebook  -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://arenasagustin.github.io/haunter-page/"
+    />
+    <meta property="og:title" content="Haunter - AgustinArenas" />
+    <meta
+      property="og:description"
+      content="Proyecto para poder mejorar en el uso de Css y HTML."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1637699554/Haunter-page_yddcm1.png"
+    />
+
+    <!--  Twitter  -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://arenasagustin.github.io/haunter-page/"
+    />
+    <meta property="twitter:title" content="Haunter - AgustinArenas" />
+    <meta
+      property="twitter:description"
+      content="Proyecto para poder mejorar en el uso de Css y HTML."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1637699554/Haunter-page_yddcm1.png"
+    />
   </head>
   <body>
     <div id="root"></div>
